--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -9,13 +9,12 @@
 }
 
 .App-header {
-  background-color: #1B1B32;
+  background-color: #2c3e50;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   /* justify-content: center; */
-  /* font-size: calc(10px + 2vmin); */
   color: white;
 }
 
