--- a/src/pages/App/assets/App.css
+++ b/src/pages/App/assets/App.css
@@ -1,19 +1,20 @@
 .App {
   text-align: center;
   background-color: #2c3e50;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  align-items: center;
 }
 
 .App-logo {
-  height: 30vmin;
+  height: 25vmin;
   pointer-events: none;
 }
 
 .App-header {
-  
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
   color: white;
 }
