--- a/src/pages/App/assets/App.css
+++ b/src/pages/App/assets/App.css
@@ -1,5 +1,5 @@
 .App {
-  background-color: #2c3e50;
+  background-color: #000000;
   color: white;
   display: flex;
   flex-direction: column;
@@ -13,5 +13,5 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 0 !important;
+  margin-bottom: 0;
 }
